--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Servises from '../components/Servises.astro';
     
      <main class="container">
      <About/>
-     <!-- <Servises/> -->
+     <Servises/>
      </main>
 
 </Layout>
