--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -102,13 +102,13 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
         justify-content: center;
         align-items: center;
         width: 100%;
+        height: 100%;
         border: 2px solid var(--color-gold);
         border-radius: 50px;
     }
 
     .item-img {
         max-width: 280px;
-        height: 100%;
         min-width: 200px;
         aspect-ratio: 280 / 400;
         overflow: hidden;
@@ -121,6 +121,7 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
     }
 
     .item-text {
+        /* max-width: 200px; */
         min-width: 160px;
         display: flex;
         flex-direction: column;
@@ -131,7 +132,6 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
         /*80px 40px;*/
         color: var(--color-snow);
         background-color: var(--color-gold);
-        padding: 26px;
     }
 
     .work-total {
@@ -202,15 +202,20 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
             grid-template-rows: repeat(3, minmax(93px, auto));
         }
 
+        .grid-item {
+        border-radius: 20px;
+    }
+
         .item-img {
             min-width: 150px;
         }
 
         .item-text {
+            box-sizing: content-box;
+            max-width: 100%;
             flex-direction: row;
             justify-content: space-between;
             row-gap: 20px;
-            padding: 20px 10px;
         }
 
         .item1 {
