--- a/src/components/Servises.astro
+++ b/src/components/Servises.astro
@@ -65,11 +65,12 @@ const servisesItem = [
         max-width: 70.375rem;
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 258px));
+        grid-template-columns: repeat(3, minmax(140px, 258px));
+        grid-template-rows: repeat(2, auto);
         justify-content: space-between;
         justify-items: center;
-        column-gap: 2rem;
-        row-gap: 3.125rem;
+        column-gap: 1rem;
+        row-gap: clamp(1.25rem, -0.4808rem + 4.8077vw, 3.125rem); /*576 - 20px 1200px - 50px*/
     }
 
     .servises-item {
@@ -117,17 +118,18 @@ const servisesItem = [
         color: var(--color-khaki-dark);
     }
 
-    @media screen and (max-width: 991.98px) {
+    /* @media screen and (max-width: 991.98px) {
         .servises-list {
             justify-content: space-evenly;
             grid-template-columns: repeat(2, minmax(200px, 258px));
             grid-template-rows: repeat(3, auto);
         }
-    }
+    } */
 
     @media screen and (max-width: 575.98px) {
         .servises-list {
-/*Сделать скорее всего слайдер */
+            grid-template-columns: repeat(2, minmax(140px, 220px));
+            grid-template-rows: repeat(3, auto);
         }
     }
 </style>
