--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -66,12 +66,12 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
 
 <style>
     .about {
-        max-width: 1400px;
+        max-width: 87.5rem;
     }
 
     .about-subtitle {
         font-weight: 400;
-        font-size: 16px;
+        font-size: 1rem;
         text-align: center;
         color: var(--color-gold);
     }
@@ -80,21 +80,19 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
         display: flex;
         flex-direction: column;
         justify-content: center;
-        row-gap: clamp(1.875rem, 0.7639rem + 2.3148vw, 2.5rem);
+        row-gap: clamp(1.25rem, 0.0962rem + 3.2051vw, 2.5rem);/*576 - 20px 1200px - 40px*/
         margin-top: clamp(2.5rem, 1.3889rem + 2.3148vw, 3.125rem);
     }
-
 
     .about-grid {
         max-width: 100%;
         display: grid;
-        /* grid-template-columns: repeat(2, minmax(1fr, 280px)) repeat(2, minmax(71px, 91px))  repeat(2, minmax(1fr, 280px)); */
         grid-template-columns: repeat(2, minmax(100px, 1fr)) repeat(2, minmax(71px, 91px)) repeat(2, minmax(100px, 1fr));
         grid-template-rows: repeat(4, minmax(93px, 1fr));
         justify-content: center;
         justify-items: center;
-        column-gap: 18px;
-        row-gap: 10px;
+        column-gap: 1.125rem;
+        row-gap: 1.125rem;
     }
 
     .grid-item {
@@ -104,19 +102,20 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
         width: 100%;
         height: 100%;
         border: 2px solid var(--color-gold);
-        border-radius: 50px;
+        border-radius: 3.125rem;
     }
 
     .item-img {
-        max-width: 280px;
-        min-width: 200px;
-        aspect-ratio: 280 / 400;
+        /* max-width: 280px;
+        min-width: 200px; */
+        /* aspect-ratio: 280 / 400; */
         overflow: hidden;
     }
 
     .item-img__img {
         max-width: 100%;
         height: 100%;
+        aspect-ratio: 280 / 400;
         object-fit: cover;
     }
 
@@ -141,8 +140,8 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
 
     .work-title {
         font-weight: 400;
-        font-size: 24px;
-        margin: 0 20px;
+        font-size: 1.5rem;
+        margin: 0 1.25rem;
     }
 
     .item1 {
@@ -171,28 +170,46 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
     }
 
     @media screen and (max-width: 1199.98px) {
+        .about-grid {
+            grid-template-columns: repeat(4, minmax(100px, 1fr));
+            grid-template-rows: repeat(2, minmax(93px, auto));
+        }
+
+        .grid-item {
+            border-radius: 20px;
+        }
+
+        .item-text {
+            max-width: 100%;
+            flex-direction: row;
+            justify-content: space-evenly;
+            row-gap: 1.25rem;
+            padding: 1.25rem 0;
+        }
+
         .item1 {
-            grid-row: 1 / 3;
-            grid-column: 1 / 3;
+            grid-row: 1;
+            grid-column: 1;
         }
 
         .item2 {
-            grid-row: 1 / 3;
-            grid-column: 5 / 7;
+            grid-row: 1;
+            grid-column: 2;
         }
+
         .item3 {
-            grid-row: 3 / 5;
-            grid-column: 1 / 3;
+            grid-row: 1;
+            grid-column: 3;
         }
 
         .item4 {
-            grid-row: 3 / 5;
-            grid-column: 5 / 7;
+            grid-row: 1;
+            grid-column: 4;
         }
 
         .item5 {
-            grid-row: 1 / 5;
-            grid-column: 3 / 5;
+            grid-row: 2;
+            grid-column: 1 / 5;
         }
     }
 
@@ -201,10 +218,6 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
             grid-template-columns: repeat(2, minmax(auto, 250px));
             grid-template-rows: repeat(3, minmax(93px, auto));
         }
-
-        .grid-item {
-        border-radius: 20px;
-    }
 
         .item-img {
             min-width: 150px;
@@ -216,6 +229,7 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
             flex-direction: row;
             justify-content: space-between;
             row-gap: 20px;
+            padding: 0;
         }
 
         .item1 {
