--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,7 @@ body {
 ul {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
 h2, p {
@@ -34,7 +35,7 @@ h2, p {
 
 .section {
     width: 100%;
-    --margin-section-bottom: clamp(6.25rem, 3.3654rem + 8.0128vw, 9.375rem); /*576 - 100px 1200px - 150px*/
+    --margin-section-bottom: clamp(3.125rem, -2.6442rem + 16.0256vw, 9.375rem); /*576 - 50px 1200px - 150px*/
     display: flex;
     flex-direction: column;
     align-items: center;
