--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -39,7 +39,7 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
 ---
 <section class="section">
     <div class="about">
-        <h2>
+        <h2 class="text-uppercase title font-size_2">
             aBout me
         </h2>
         <article class="about-content">
@@ -81,7 +81,7 @@ const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions wit
         flex-direction: column;
         justify-content: center;
         row-gap: clamp(1.25rem, 0.0962rem + 3.2051vw, 2.5rem);/*576 - 20px 1200px - 40px*/
-        margin-top: clamp(2.5rem, 1.3889rem + 2.3148vw, 3.125rem);
+        margin-top: clamp(1.875rem, 0.7212rem + 3.2051vw, 3.125rem); /*576 - 30px 1200px - 50px*/
     }
 
     .about-grid {
