--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import "../styles/global.css";
 import Layout from '../layouts/Layout.astro';
 import About from '../components/About.astro';
 import Servises from '../components/Servises.astro';
+import Contacts from "../components/Contacts.astro";
+import Footer from "../components/Footer.astro";
 
 ---
 
@@ -12,10 +14,11 @@ import Servises from '../components/Servises.astro';
     description = "Transform your confidence at SIRENE Beauty Salon in Illinois, specializing in individual eyelash and hair extensions. Experience personalized beauty services that enhance your unique image. Change your look and be unsurpassed!">
     
      <main class="container">
-     <About/>
-     <Servises/>
+        <About/>
+         <Servises/>
+        <!-- <Contacts/> -->
      </main>
-
+    <Footer/>
 </Layout>
 
 <style>
