--- a/src/components/Servises.astro
+++ b/src/components/Servises.astro
@@ -42,7 +42,7 @@ const servisesItem = [
 
 ---
 <section class="servises section">
-    <h2>
+    <h2 class="text-uppercase font-size_2 title ">
         services
     </h2>
     <ul class="servises-list">
@@ -53,7 +53,7 @@ const servisesItem = [
                     src={item.imgPath}
                     width={250} height={250} alt={item.title} />
                 </div>
-                <h4 class="servises-item__title">{item.title}</h4>
+                <h3 class="servises-item__title title font-size_4">{item.title}</h3>
                 <a class="servises-item__link" href={item.href}></a>
             </li>
         ))}
@@ -93,10 +93,7 @@ const servisesItem = [
     }
 
     .servises-item__title {
-        font-weight: 400;
         font-style: normal;
-        text-align: center;
-        color: var(--color-black1);
         transition: all 0.7s;
         margin-top: 1rem;
     }
@@ -130,6 +127,7 @@ const servisesItem = [
         .servises-list {
             grid-template-columns: repeat(2, minmax(140px, 220px));
             grid-template-rows: repeat(3, auto);
+            justify-content: space-evenly;;
         }
     }
 </style>
