--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,11 +16,7 @@ import Footer from "../components/Footer.astro";
      <main class="container">
         <About/>
          <Servises/>
-        <!-- <Contacts/> -->
+        <Contacts/>
      </main>
     <Footer/>
 </Layout>
-
-<style>
-
-</style>
