--- a/src/components/Address.astro
+++ b/src/components/Address.astro
@@ -48,12 +48,7 @@ const address = "1111 W Dundee Rd Wheeling";
 
     /* style footer */
     .footer-address {
-        min-width: 220px;
-        grid-row-start: 1;
-        grid-column-start: 3;
-
-        grid-row-end: 3;
-        grid-column-end: 4;
+        min-width: 250px;
     }
 
     .footer-address .address {
@@ -65,6 +60,13 @@ const address = "1111 W Dundee Rd Wheeling";
         font-weight: 400;
         font-size: clamp(0.75rem, 0.0577rem + 1.9231vw, 1.25rem); /*576 - 12; 992-20 */
     }
+    @media screen and (max-width: 767.98px) {
+        .footer-address {
+        max-width: 270px;
+        width: 100%;
+        min-width: 185px;
+    }
+    }
 
     @media screen and (max-width: 575.98px) {
         .contacts-address .address {
@@ -72,16 +74,9 @@ const address = "1111 W Dundee Rd Wheeling";
             align-items: center;
         }
 
-        /* style footer */
-        .footer-address {
-            max-width: 220px;
-            min-width: 180px;
-            grid-row: 2 / 3;
-            grid-column: 1 / 3;
-        }
-
         .footer-address .street {
             font-weight: 500;
         }
     }
+
 </style>
