--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -10,15 +10,15 @@ const { color } = Astro.props as Color;
 const NavLinks = [
     { title: "Servises", href: "#" },
     { title: "About me", href: "#" },
-    { title: "Jewelry", href: "#" },
-    { title: "Brand", href: "#" },
+    { title: "Price list", href: "#" },
+    { title: "Contact & Location", href: "#" },
     ];
 ---
 <nav class={className}>
     <ul class="nav-list" >
         { NavLinks.map((item) => 
         <li class="nav-item">
-            <a class="nav-item__link" data-color={color} target="_blank" href={item.href} title={item.title}>{item.title}</a>
+            <a class="nav-item__link" data-color={color} href={item.href} title={item.title}>{item.title}</a>
         </li>
         ) }
     </ul>
@@ -26,38 +26,36 @@ const NavLinks = [
 
 
 <style>
-    .nav-footer {
-        width: max-content;
-        grid-row: 1 / 3;
-        grid-column: 2 / 3;
-
+    .nav-item__link {
+        text-decoration: none;
+        text-wrap: nowrap;
+    }
+    .footer-nav {
     }
 
-    .nav-footer .nav-list {
+    .footer-nav .nav-list {
         display: flex;
         flex-direction: column;
-        row-gap: 32px;
+        row-gap: calc( 2 * var(--flex-gap-min));
     }
 
-    .nav-footer .nav-item__link {
+    .footer-nav .nav-item__link {
         font-family: var(--font-Roboto);
         font-size: clamp(0.875rem, 0.0096rem + 2.4038vw, 1.5rem);/*576 - 14px 992px - 24px*/
         font-weight: 400;
         transition: color 0.7s;
     }
 
-    .nav-footer .nav-item__link:is(:hover, :focus) {
+    .footer-nav .nav-item__link:hover {
         color: var(--color-khaki-dark);
         
     }
 
     @media screen and (max-width: 575.98px) {
-        .nav-footer {
-            grid-row: 2 / 3;
-            grid-column: 3 / 4;
+        .footer-nav {
         }
 
-        .nav-footer .nav-item__link {
+        .footer-nav .nav-item__link {
             font-weight: 500;
         }
     }
