--- a/src/components/elements/Logo.astro
+++ b/src/components/elements/Logo.astro
@@ -23,17 +23,14 @@ const { color } = Astro.props as Color;
 
 <style>
   .footer-logo {
-    width: clamp(8.75rem, -2.3269rem + 30.7692vw, 16.75rem);/*992-268 576 - 140 */
-    height: auto;
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
-
+    flex: 0 1 auto;  
+    max-width: clamp(8.75rem, -2.3269rem + 30.7692vw, 16.75rem);/*992-268 576 - 140 */
+    height: 100%;
+    
   }
 
   @media screen and (max-width: 575.98px) {
     .footer-logo {
-      grid-row: 1 / 2;
-      grid-column: 1 / 4;
     }
 
   }
