--- a/src/components/elements/Telephone.astro
+++ b/src/components/elements/Telephone.astro
@@ -32,6 +32,7 @@ const tel = 8476710065;
         font-family: var(--font-Roboto);
         font-style: normal;
         transition: color 0.7s;
+        text-decoration: none;
         /* gap: 20px; */
     }
 
@@ -48,11 +49,14 @@ const tel = 8476710065;
         width: clamp(1.375rem, 0.1635rem + 3.3654vw, 2.25rem);
         /* 992-24; 576 - 16*/
     }
+    .contacts-address {
+        column-gap: 20px;
+    }
 
-    /* [data-icon="phone"] {
+    .contacts-address [data-icon="phone"] {
         width: clamp(1.625rem, 0.2404rem + 3.8462vw, 3.125rem);
         height: auto;
-    } */
+    }
     @media screen and (max-width: 575.98px) {
         .footer-address {
             font-weight: 500;
@@ -60,5 +64,9 @@ const tel = 8476710065;
             font-size: clamp(1rem, 0.3077rem + 1.9231vw, 1.5rem);
             /* 992-24; 576 - 16*/
         }
+
+        .contacts-address {
+        column-gap: 12px;
+    }
     }
 </style>
