--- a/src/components/NavSocialMedia.astro
+++ b/src/components/NavSocialMedia.astro
@@ -50,7 +50,7 @@ const { color } = Astro.props as Color;
     }
 
     [data-color="black"] .social-icon:is(:hover, :focus) {
-        color: red;
+        color:  var(--color-khaki-dark);
     }
 
     @media screen and (max-width: 575.98px) {
