--- a/src/components/elements/Telephone.astro
+++ b/src/components/elements/Telephone.astro
@@ -20,7 +20,7 @@ const { width, height} = Astro.props as Icons;
 const tel = 8476710065;
 ---
 
-<a class:list={[className, "tel font-size_4"]} data-color={color} href=`tel:+${tel}`>
+<a class:list={[className, "tel font-size_4"]} data-color={color} href=`tel:+1${tel}`>
     <Icon name = "phone" width={width} height={height}/>
     <p>(847) 671 0 065</p>
 </a>
