--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -37,7 +37,7 @@ const work = [
 
 const subtitle = "Hi, I am Yuliia, the expert in eyelash and hair extensions with 5 years experience, is dedicated to creating flawless transformations that boost your confidence and leave you feeling absolutely fabulous. With a personalized approach, I am ensures that every client is treated like royalty, providing a pampered and relaxing experience from start to finish";
 ---
-<section class="section">
+<section  id="about" class="section">
     <div class="about">
         <h2 class="text-uppercase title font-size_2">
             aBout me
