--- a/src/components/Servises.astro
+++ b/src/components/Servises.astro
@@ -41,7 +41,7 @@ const servisesItem = [
 ]
 
 ---
-<section class="servises section">
+<section id="servises" class="servises section">
     <h2 class="text-uppercase font-size_2 title ">
         services
     </h2>
