--- a/src/components/Contacts.astro
+++ b/src/components/Contacts.astro
@@ -7,7 +7,7 @@ import imgLocation from "./assets/images/interior/interior_img10.jpg";
 const color = "black";
 ---
 
-<section class="section">
+<section id="contact" class="section">
     <h2 class="font-size_2 title text-uppercase">contacts & location</h2>
     <div class="contacts-wrap">
         <section class="contacts">
