--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ const color = "white";
 <footer class="footer">
     <div class="container">
         <div class="footer-wrap">
-            <Logo class="footer-logo" color={color} />
+            <Logo color={color} />
             <div class="footer-wrap__wrap">
             <Navigation class="footer-nav" color={color} />
             <Address class="footer-address" color={color} />                
@@ -105,6 +105,8 @@ const color = "white";
     @media screen and (max-width: 575.98px) {
         .footer-wrap__wrap {
             max-width: 100%;
+            column-gap: var(--flex-gap-min);
+            justify-content: center;
         }
 
         .copyright {
