--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import "../styles/global.css";
 import Layout from '../layouts/Layout.astro';
+import Header from "../components/Header.astro";
+import Hero from "../components/Hero.astro";
 import About from '../components/About.astro';
 import Servises from '../components/Servises.astro';
 import Contacts from "../components/Contacts.astro";
@@ -12,10 +14,11 @@ import Footer from "../components/Footer.astro";
     title = "SIRENE | Beauty Studio"
     author = "Design SIRENE 2024 by Olena Beltiukova, web developer by Sopun Yuriy"
     description = "Transform your confidence at SIRENE Beauty Salon in Illinois, specializing in individual eyelash and hair extensions. Experience personalized beauty services that enhance your unique image. Change your look and be unsurpassed!">
-    
+    <Header/>
      <main class="container">
+        <Hero/>
         <About/>
-         <Servises/>
+        <Servises/>
         <Contacts/>
      </main>
     <Footer/>
