... add scroll-behavior: smooth

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,3 +27,10 @@ const { title, author, description } = Astro.props;
 	</body>
 </html>
 
+<style>
+	 html {
+   height: 100%;
+   scroll-behavior: smooth;
+ }
+</style>
+
