--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -18,7 +18,7 @@ const NavLinks = [
 ---
 <nav class={className}>
     <div class="background-nav" aria-hidden="true"></div>
-    <button type="button" class="hamburger1 hamburger">
+    <button type="button" class="hamburger">
         <span></span>
         <span></span>
         <span></span>
@@ -126,10 +126,6 @@ const NavLinks = [
 
 
     @media screen and (max-width: 575.98px) {
-        /* body {
-            overflow-y: hidden;
-        } */
-
         /*header */
         .header-nav {
             --width-button: 2rem;
@@ -198,7 +194,6 @@ const NavLinks = [
             }
 
             .header-nav .nav-list {
-            /* margin-top: -380px; */
             display: flex;
             flex-direction: column;
             align-items: center;
